Spartanized code.