@@ -17,28 +17,24 @@ public class range {
     
     //funcs & methods
     inner_range() {
-      from_defined=false;
-      to_defined=false;
+      to_defined=from_defined = false;
     }
 
     void set_from(int f) {
-      from=new Integer(f);
+      from=Integer.valueOf(f);
       from_defined=true;
     }
     void set_to(int f) {
-      to=new Integer(f);
+      to=Integer.valueOf(f);
       to_defined=true;
     }
     
     public Integer from() {
-      if(from_defined){
-        return from;
-      }
-      return null;
+      return from_defined ? from : null;
     }
     
-    public inner_range to(int t) {
-      this.set_to(t);
+    public inner_range to(int ¢) {
+      this.set_to(¢);
       return this;
     }
     public inner_range from(int f) {
@@ -48,56 +44,50 @@ public class range {
     
     public inner_range interset (inner_range param) {
       
-      inner_range new_r = new inner_range();
+      inner_range $ = new inner_range();
       if(param.from_defined) {
         if(this.from_defined&&(this.from.intValue()>param.from.intValue())) {
-          new_r.set_from(this.from.intValue());
+          $.set_from(this.from.intValue());
         }else {
-          new_r.set_from(param.from.intValue());
+          $.set_from(param.from.intValue());
         }
       }else {
         if(this.from_defined) {
-          new_r.set_from(this.from.intValue());
+          $.set_from(this.from.intValue());
         }
       }
 
 
       if(param.to_defined) {
         if(this.to_defined&&(this.to.intValue()<param.to.intValue())) {
-          new_r.set_to(this.to.intValue());
+          $.set_to(this.to.intValue());
         }else {
-          new_r.set_to(param.to.intValue());
+          $.set_to(param.to.intValue());
         }
       }else {
         if(this.to_defined) {
-          new_r.set_to(this.to.intValue());
+          $.set_to(this.to.intValue());
         }
       }
-      return new_r;
+      return $;
       
     }
     
     public boolean includes(int a) {
-      if(from_defined) { 
-        if (a>=from.intValue()) {
-          if(to_defined) {
-            return a<to.intValue();
+      if (from_defined) {
+        if (a >= from.intValue()) {
+          if (to_defined) {
+            return a < to.intValue();
           }
           return true;
         }
         return false;
       }
-      if(to_defined) {
-        return a<to.intValue();
-      }
-      return true;
+      return to_defined ? a < to.intValue() : true;
     }
     
     public Iterator<Integer> numbers(){
-      if(from_defined) { 
-      return iterator();
-      }
-      return new MyIterator(Integer.valueOf(Integer.MIN_VALUE));
+      return from_defined ? iterator() : new MyIterator(Integer.valueOf(Integer.MIN_VALUE));
     }
 
     @Override public Iterator<Integer> iterator() {
@@ -114,15 +104,11 @@ public class range {
       Integer curr;
 
       @Override public boolean hasNext() {
-          if (!to_defined) {
-            return true;
-          }
-          return (curr.intValue()<to.intValue()-1);
+        return !to_defined ? true : curr.intValue() < to.intValue() - 1;
       }
 
       @Override public Integer next() {
-        curr=Integer.valueOf(curr.intValue()+1);
-        return curr;
+        return curr = Integer.valueOf(curr.intValue() + 1);
       }
 
   }
@@ -131,15 +117,15 @@ public class range {
  //--------------------------------------------------------------- 
   
   public static inner_range from(int f) {
-    inner_range f_range=new inner_range();
-    f_range.set_from(f);
-    return f_range;    
+    inner_range $=new inner_range();
+    $.set_from(f);
+    return $;    
   }
   
   public static inner_range to(int t) {
-    inner_range t_range=new inner_range();
-    t_range.set_to(t);
-    return t_range;  
+    inner_range $=new inner_range();
+    $.set_to(t);
+    return $;  
   }
  
 
